Correct form spacing

--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ body {
 
 .modal .form-group {
     display: flex;
-    gap: 1rem;
+    gap: .5rem;
     justify-content: center;
 }
 
